--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHANGRETTA | OFFICIAL LINKS</title>
+    <title>CHANGRETTA | OFFICIAL LIST</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -12,8 +12,7 @@
             --secondary: #888888;
             --bg-dark: #0a0a0a;
             --glass: rgba(255, 255, 255, 0.05);
-            --border: rgba(255, 255, 255, 0.2);
-            --shimmer-speed: 2.5s;
+            --border: rgba(255, 255, 255, 0.1);
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; cursor: crosshair; }
@@ -33,7 +32,7 @@
         .bg-overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),
+            background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
                         url('https://img2.pic.in.th/475638765_916266083879572_6694404597216444166_n.jpg');
             background-size: cover;
             background-position: center;
@@ -49,31 +48,28 @@
             pointer-events: none;
         }
 
-        /* --- Header: Winterfell Awake Style --- */
+        /* --- Header Section --- */
         .top-header {
             position: absolute;
             top: 40px;
             width: 100%;
             text-align: center;
             z-index: 10;
-            line-height: 0.8;
         }
 
         .wf-text {
             font-family: 'Orbitron', sans-serif;
-            font-size: 5.5rem;
+            font-size: 4.5rem;
             font-weight: 900;
             letter-spacing: -2px;
             text-transform: uppercase;
-            user-select: none;
-            display: block;
             background: linear-gradient(90deg, #ffffff 0%, #ffffff 35%, #cccccc 50%, #ffffff 65%, #ffffff 100%);
             background-size: 200% auto;
             color: transparent;
             -webkit-background-clip: text;
             background-clip: text;
-            animation: greyShimmerRun var(--shimmer-speed) linear infinite;
-            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
+            animation: greyShimmerRun 2.5s linear infinite;
+            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.3));
         }
 
         @keyframes greyShimmerRun {
@@ -81,141 +77,110 @@
             100% { background-position: -200% center; }
         }
 
-        .sub-brand-text {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 0.65rem;
-            letter-spacing: 10px;
-            color: var(--secondary);
-            border-top: 1px solid var(--border);
-            border-bottom: 1px solid var(--border);
-            padding: 8px 25px;
-            margin-top: 25px;
-            display: inline-block;
-            text-transform: uppercase;
-        }
-
-        /* --- Official Social UI Panel --- */
+        /* --- List UI Container --- */
         .main-container {
             position: relative;
             z-index: 5;
+            width: 100%;
+            max-width: 600px;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            margin-top: 100px;
+            gap: 30px;
+            margin-top: 80px;
         }
 
-        .social-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
+        .category-group {
             width: 100%;
-            max-width: 500px;
         }
 
-        .official-card {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid var(--border);
-            padding: 20px;
-            text-align: center;
-            backdrop-filter: blur(15px);
-            text-decoration: none;
-            color: #fff;
-            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .official-card i {
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-            display: block;
-            color: var(--secondary);
-            transition: 0.3s;
-        }
-
-        .official-card span {
+        .category-title {
             font-family: 'Orbitron', sans-serif;
-            font-size: 0.8rem;
-            letter-spacing: 3px;
-            font-weight: 700;
+            font-size: 0.75rem;
+            letter-spacing: 5px;
+            color: var(--secondary);
+            margin-bottom: 15px;
+            padding-left: 10px;
+            border-left: 3px solid var(--primary);
             text-transform: uppercase;
         }
 
-        .official-card:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: #fff;
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
+        .official-list {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
-        .official-card:hover i {
-            color: #fff;
-            filter: drop-shadow(0 0 8px #fff);
-        }
-
-        /* Decoration Corners for Cards */
-        .card-corner {
-            position: absolute;
-            width: 8px; height: 8px;
-            border: 1.5px solid var(--primary);
-        }
-        .tl { top: 0; left: 0; border-right: none; border-bottom: none; }
-        .br { bottom: 0; right: 0; border-left: none; border-top: none; }
-
-        /* --- Discord Button above Music Player --- */
-        .discord-wrapper {
-            position: fixed;
-            bottom: 110px;
-            right: 40px;
-            z-index: 100;
-        }
-
-        .discord-btn {
-            background: rgba(0, 0, 0, 0.85);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 50px;
-            padding: 8px 20px;
+        .list-item {
+            background: var(--glass);
+            border: 1px solid var(--border);
+            padding: 15px 25px;
             display: flex;
             align-items: center;
-            gap: 12px;
+            justify-content: space-between;
             text-decoration: none;
-            color: white;
+            color: #fff;
             transition: 0.3s;
-            backdrop-filter: blur(5px);
-        }
-
-        .discord-btn:hover { background: rgba(255, 255, 255, 0.15); transform: scale(1.05); border-color: #fff;}
-
-        /* --- Music Player Bar --- */
-        #music-container {
-            position: fixed;
-            bottom: 40px;
-            right: 40px;
-            z-index: 100;
-        }
-
-        .player-bar {
-            display: flex; align-items: center;
-            background: rgba(0, 0, 0, 0.9);
-            border: 1px solid var(--border);
-            padding: 10px 20px; gap: 15px;
             backdrop-filter: blur(10px);
+            position: relative;
         }
 
-        .album-art { width: 40px; height: 40px; filter: grayscale(100%); border: 1px solid var(--secondary); }
-        .song-info h4 { font-size: 0.8rem; color: #fff; text-align: left;}
-        .song-info p { font-size: 0.55rem; color: var(--secondary); text-align: left;}
+        .list-item:hover {
+            background: rgba(255, 255, 255, 0.1);
+            border-color: #fff;
+            padding-left: 35px; /* Slide effect */
+            box-shadow: inset 5px 0 0 #fff;
+        }
 
+        .item-info {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .item-info i {
+            font-size: 1.2rem;
+            color: var(--secondary);
+            width: 25px;
+            text-align: center;
+        }
+
+        .list-item:hover .item-info i { color: #fff; }
+
+        .item-name {
+            font-family: 'Rajdhani', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 700;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+        }
+
+        .item-action {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 0.6rem;
+            letter-spacing: 2px;
+            opacity: 0.5;
+        }
+
+        /* --- Discord & Player Fixed --- */
+        .discord-wrapper { position: fixed; bottom: 110px; right: 40px; z-index: 100; }
+        .discord-btn {
+            background: rgba(0, 0, 0, 0.85); border: 1px solid var(--border); border-radius: 50px;
+            padding: 8px 20px; display: flex; align-items: center; gap: 12px; text-decoration: none; color: white; transition: 0.3s;
+        }
+        .discord-btn:hover { background: rgba(255, 255, 255, 0.1); transform: scale(1.05); }
+
+        #music-container { position: fixed; bottom: 40px; right: 40px; z-index: 100; }
+        .player-bar { display: flex; align-items: center; background: rgba(0, 0, 0, 0.9); border: 1px solid var(--border); padding: 10px 20px; gap: 15px; }
+        .album-art { width: 40px; height: 40px; filter: grayscale(100%); border: 1px solid var(--secondary); }
         .btn-toggle { background: #fff; color: #000; border: none; width: 30px; height: 30px; font-weight: 900; cursor: pointer; }
 
-        .footer { position: absolute; bottom: 25px; font-size: 0.75rem; color: var(--secondary); }
+        .footer { position: absolute; bottom: 20px; width: 100%; text-align: center; font-size: 0.75rem; color: var(--secondary); }
         .footer a { color: #fff; text-decoration: none; font-weight: bold; }
 
         @media (max-width: 768px) {
-            .wf-text { font-size: 3rem; }
-            .social-grid { grid-template-columns: 1fr; width: 80vw; }
-            .main-container { margin-top: 150px; }
+            .wf-text { font-size: 2.5rem; }
+            .main-container { width: 90%; margin-top: 120px; }
         }
     </style>
 </head>
@@ -225,48 +190,56 @@
     <div class="scanlines"></div>
 
     <div class="top-header">
-        <span class="wf-text">WELCOME TO</span>
-        <span class="wf-text">CHANGRETTA</span>
-        <div class="sub-brand-text">OFFICIAL COMMUNITY LINKS</div>
+        <span class="wf-text">OFFICIAL LINKS</span>
     </div>
 
     <div class="main-container">
-        <div class="social-grid">
-            <a href="ใส่ลิงก์YOUTUBEที่นี่" target="_blank" class="official-card">
-                <div class="card-corner tl"></div>
-                <div class="card-corner br"></div>
-                <i class="fa-brands fa-youtube"></i>
-                <span>YouTube</span>
-            </a>
-
-            <a href="https://www.facebook.com/tsumaki.tsunaji.342" target="_blank" class="official-card">
-                <div class="card-corner tl"></div>
-                <div class="card-corner br"></div>
-                <i class="fa-brands fa-facebook"></i>
-                <span>Facebook</span>
-            </a>
-
-            <a href="https://discord.gg/oneless" target="_blank" class="official-card">
-                <div class="card-corner tl"></div>
-                <div class="card-corner br"></div>
-                <i class="fa-brands fa-discord"></i>
-                <span>Discord</span>
-            </a>
-
-            <a href="ใส่ลิงก์TWITCHที่นี่" target="_blank" class="official-card">
-                <div class="card-corner tl"></div>
-                <div class="card-corner br"></div>
-                <i class="fa-brands fa-twitch"></i>
-                <span>Twitch</span>
-            </a>
+        
+        <div class="category-group">
+            <h2 class="category-title">Media & Stream</h2>
+            <div class="official-list">
+                <a href="ใส่ลิงก์YOUTUBEที่นี่" target="_blank" class="list-item">
+                    <div class="item-info">
+                        <i class="fa-brands fa-youtube"></i>
+                        <span class="item-name">YouTube Channel</span>
+                    </div>
+                    <span class="item-action">Subscribe</span>
+                </a>
+                <a href="ใส่ลิงก์TWITCHที่นี่" target="_blank" class="list-item">
+                    <div class="item-info">
+                        <i class="fa-brands fa-twitch"></i>
+                        <span class="item-name">Twitch Studio</span>
+                    </div>
+                    <span class="item-action">Follow</span>
+                </a>
+            </div>
         </div>
+
+        <div class="category-group">
+            <h2 class="category-title">Community</h2>
+            <div class="official-list">
+                <a href="https://www.facebook.com/tsumaki.tsunaji.342" target="_blank" class="list-item">
+                    <div class="item-info">
+                        <i class="fa-brands fa-facebook"></i>
+                        <span class="item-name">Facebook Page</span>
+                    </div>
+                    <span class="item-action">Contact</span>
+                </a>
+                <a href="https://discord.gg/oneless" target="_blank" class="list-item">
+                    <div class="item-info">
+                        <i class="fa-brands fa-discord"></i>
+                        <span class="item-name">Discord Server</span>
+                    </div>
+                    <span class="item-action">Join Group</span>
+                </a>
+            </div>
+        </div>
+
     </div>
 
     <div class="discord-wrapper">
         <a href="https://discord.gg/oneless" target="_blank" class="discord-btn">
-            <div class="discord-icon">
-                <svg width="18" viewBox="0 0 127.14 96.36" fill="#5865F2"><path d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.71,32.65-1.82,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.22,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.51,11.1,105.33,105.33,0,0,0,32.19-16.14h0C130.46,50.45,125.13,26.79,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>
-            </div>
+            <i class="fa-brands fa-discord" style="color: #5865F2; font-size: 1.2rem;"></i>
             <div style="display:flex; flex-direction:column; line-height:1.1">
                 <span style="font-size:0.6rem; color:#aaa; font-weight:bold; text-transform:uppercase;">Oneless Project</span>
                 <span style="font-size:1rem; font-weight:700;">Join Discord</span>
@@ -278,8 +251,8 @@
         <div class="player-bar">
             <img src="https://i.ytimg.com/vi/xy3AcmW0lrQ/maxresdefault.jpg" class="album-art" alt="Art">
             <div class="song-info">
-                <h4>End of Beginning</h4>
-                <p>Djo // AUDIO_SYSTEM</p>
+                <h4 style="font-size: 0.8rem;">End of Beginning</h4>
+                <p style="font-size: 0.55rem; color: var(--secondary);">Djo // AUDIO_SYSTEM</p>
             </div>
             <button class="btn-toggle" onclick="togglePlayPause()" id="playBtn">||</button>
         </div>
