--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             --bg-dark: #0a0a0a;
             --glass: rgba(255, 255, 255, 0.05);
             --border: rgba(255, 255, 255, 0.1);
+            --shimmer-speed: 2.5s;
+            /* Social Colors */
+            --youtube: #FF0000;
+            --twitch: #9146FF;
+            --facebook: #1877F2;
+            --discord: #5865F2;
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; cursor: crosshair; }
@@ -39,15 +45,6 @@
             z-index: -1;
         }
 
-        .scanlines {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(to bottom, transparent 50%, rgba(255, 255, 255, 0.01) 50%);
-            background-size: 100% 4px;
-            z-index: 10;
-            pointer-events: none;
-        }
-
         /* --- Header Section --- */
         .top-header {
             position: absolute;
@@ -68,7 +65,7 @@
             color: transparent;
             -webkit-background-clip: text;
             background-clip: text;
-            animation: greyShimmerRun 2.5s linear infinite;
+            animation: greyShimmerRun var(--shimmer-speed) linear infinite;
             filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.3));
         }
 
@@ -82,54 +79,49 @@
             position: relative;
             z-index: 5;
             width: 100%;
-            max-width: 600px;
+            max-width: 550px;
             display: flex;
             flex-direction: column;
-            gap: 30px;
+            gap: 20px;
             margin-top: 80px;
         }
 
         .category-group {
             width: 100%;
+            margin-bottom: 5px;
         }
 
         .category-title {
             font-family: 'Orbitron', sans-serif;
-            font-size: 0.75rem;
-            letter-spacing: 5px;
+            font-size: 0.65rem;
+            letter-spacing: 4px;
             color: var(--secondary);
-            margin-bottom: 15px;
-            padding-left: 10px;
-            border-left: 3px solid var(--primary);
+            margin-bottom: 12px;
+            padding-left: 15px;
+            border-left: 2px solid #fff;
             text-transform: uppercase;
-        }
-
-        .official-list {
-            list-style: none;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            opacity: 0.8;
         }
 
         .list-item {
             background: var(--glass);
             border: 1px solid var(--border);
-            padding: 15px 25px;
+            padding: 14px 25px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             text-decoration: none;
             color: #fff;
-            transition: 0.3s;
+            transition: all 0.3s ease;
             backdrop-filter: blur(10px);
-            position: relative;
+            margin-bottom: 8px;
         }
 
         .list-item:hover {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.08);
             border-color: #fff;
-            padding-left: 35px; /* Slide effect */
-            box-shadow: inset 5px 0 0 #fff;
+            transform: translateX(10px);
+            box-shadow: -5px 0 0 #fff;
         }
 
         .item-info {
@@ -138,14 +130,19 @@
             gap: 20px;
         }
 
-        .item-info i {
-            font-size: 1.2rem;
-            color: var(--secondary);
-            width: 25px;
-            text-align: center;
-        }
+        /* Social Brand Colors on Hover */
+        .list-item.yt:hover i { color: var(--youtube); }
+        .list-item.tw:hover i { color: var(--twitch); }
+        .list-item.fb:hover i { color: var(--facebook); }
+        .list-item.dc:hover i { color: var(--discord); }
 
-        .list-item:hover .item-info i { color: #fff; }
+        .item-info i {
+            font-size: 1.3rem;
+            color: #fff;
+            width: 30px;
+            text-align: center;
+            transition: 0.3s;
+        }
 
         .item-name {
             font-family: 'Rajdhani', sans-serif;
@@ -157,21 +154,24 @@
 
         .item-action {
             font-family: 'Orbitron', sans-serif;
-            font-size: 0.6rem;
+            font-size: 0.55rem;
             letter-spacing: 2px;
-            opacity: 0.5;
+            opacity: 0.4;
+            text-transform: uppercase;
         }
 
-        /* --- Discord & Player Fixed --- */
+        .list-item:hover .item-action { opacity: 1; }
+
+        /* --- Discord & Player --- */
         .discord-wrapper { position: fixed; bottom: 110px; right: 40px; z-index: 100; }
         .discord-btn {
             background: rgba(0, 0, 0, 0.85); border: 1px solid var(--border); border-radius: 50px;
             padding: 8px 20px; display: flex; align-items: center; gap: 12px; text-decoration: none; color: white; transition: 0.3s;
         }
-        .discord-btn:hover { background: rgba(255, 255, 255, 0.1); transform: scale(1.05); }
+        .discord-btn:hover { background: rgba(255, 255, 255, 0.1); transform: scale(1.05); border-color: #fff; }
 
         #music-container { position: fixed; bottom: 40px; right: 40px; z-index: 100; }
-        .player-bar { display: flex; align-items: center; background: rgba(0, 0, 0, 0.9); border: 1px solid var(--border); padding: 10px 20px; gap: 15px; }
+        .player-bar { display: flex; align-items: center; background: rgba(0, 0, 0, 0.9); border: 1px solid var(--border); padding: 10px 20px; gap: 15px; backdrop-filter: blur(10px); }
         .album-art { width: 40px; height: 40px; filter: grayscale(100%); border: 1px solid var(--secondary); }
         .btn-toggle { background: #fff; color: #000; border: none; width: 30px; height: 30px; font-weight: 900; cursor: pointer; }
 
@@ -187,52 +187,55 @@
 <body>
 
     <div class="bg-overlay"></div>
-    <div class="scanlines"></div>
 
     <div class="top-header">
-        <span class="wf-text">OFFICIAL LINKS</span>
+        <span class="wf-text">OFFICIAL DIRECTORY</span>
     </div>
 
     <div class="main-container">
         
         <div class="category-group">
-            <h2 class="category-title">Media & Stream</h2>
-            <div class="official-list">
-                <a href="ใส่ลิงก์YOUTUBEที่นี่" target="_blank" class="list-item">
-                    <div class="item-info">
-                        <i class="fa-brands fa-youtube"></i>
-                        <span class="item-name">YouTube Channel</span>
-                    </div>
-                    <span class="item-action">Subscribe</span>
-                </a>
-                <a href="ใส่ลิงก์TWITCHที่นี่" target="_blank" class="list-item">
-                    <div class="item-info">
-                        <i class="fa-brands fa-twitch"></i>
-                        <span class="item-name">Twitch Studio</span>
-                    </div>
-                    <span class="item-action">Follow</span>
-                </a>
-            </div>
+            <h2 class="category-title">Video Content</h2>
+            <a href="ใส่ลิงก์YOUTUBEที่นี่" target="_blank" class="list-item yt">
+                <div class="item-info">
+                    <i class="fa-brands fa-youtube"></i>
+                    <span class="item-name">YouTube Channel</span>
+                </div>
+                <span class="item-action">Subscribe</span>
+            </a>
         </div>
 
         <div class="category-group">
-            <h2 class="category-title">Community</h2>
-            <div class="official-list">
-                <a href="https://www.facebook.com/tsumaki.tsunaji.342" target="_blank" class="list-item">
-                    <div class="item-info">
-                        <i class="fa-brands fa-facebook"></i>
-                        <span class="item-name">Facebook Page</span>
-                    </div>
-                    <span class="item-action">Contact</span>
-                </a>
-                <a href="https://discord.gg/oneless" target="_blank" class="list-item">
-                    <div class="item-info">
-                        <i class="fa-brands fa-discord"></i>
-                        <span class="item-name">Discord Server</span>
-                    </div>
-                    <span class="item-action">Join Group</span>
-                </a>
-            </div>
+            <h2 class="category-title">Live Broadcast</h2>
+            <a href="ใส่ลิงก์TWITCHที่นี่" target="_blank" class="list-item tw">
+                <div class="item-info">
+                    <i class="fa-brands fa-twitch"></i>
+                    <span class="item-name">Twitch Studio</span>
+                </div>
+                <span class="item-action">Follow</span>
+            </a>
+        </div>
+
+        <div class="category-group">
+            <h2 class="category-title">Social Feed</h2>
+            <a href="https://www.facebook.com/tsumaki.tsunaji.342" target="_blank" class="list-item fb">
+                <div class="item-info">
+                    <i class="fa-brands fa-facebook"></i>
+                    <span class="item-name">Facebook Official</span>
+                </div>
+                <span class="item-action">Contact</span>
+            </a>
+        </div>
+
+        <div class="category-group">
+            <h2 class="category-title">Community Server</h2>
+            <a href="https://discord.gg/oneless" target="_blank" class="list-item dc">
+                <div class="item-info">
+                    <i class="fa-brands fa-discord"></i>
+                    <span class="item-name">Discord ONELESS</span>
+                </div>
+                <span class="item-action">Join Group</span>
+            </a>
         </div>
 
     </div>
@@ -251,8 +254,8 @@
         <div class="player-bar">
             <img src="https://i.ytimg.com/vi/xy3AcmW0lrQ/maxresdefault.jpg" class="album-art" alt="Art">
             <div class="song-info">
-                <h4 style="font-size: 0.8rem;">End of Beginning</h4>
-                <p style="font-size: 0.55rem; color: var(--secondary);">Djo // AUDIO_SYSTEM</p>
+                <h4 style="font-size: 0.8rem; text-align: left;">End of Beginning</h4>
+                <p style="font-size: 0.55rem; color: var(--secondary); text-align: left;">Djo // AUDIO_SYSTEM</p>
             </div>
             <button class="btn-toggle" onclick="togglePlayPause()" id="playBtn">||</button>
         </div>
