--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             /* Social Colors */
             --youtube: #FF0000;
             --twitch: #9146FF;
-            --facebook: #1877F2;
             --discord: #5865F2;
         }
 
@@ -45,6 +44,15 @@
             z-index: -1;
         }
 
+        .scanlines {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(to bottom, transparent 50%, rgba(255, 255, 255, 0.01) 50%);
+            background-size: 100% 4px;
+            z-index: 10;
+            pointer-events: none;
+        }
+
         /* --- Header Section --- */
         .top-header {
             position: absolute;
@@ -58,7 +66,7 @@
             font-family: 'Orbitron', sans-serif;
             font-size: 4.5rem;
             font-weight: 900;
-            letter-spacing: -2px;
+            letter-spacing: 12px; 
             text-transform: uppercase;
             background: linear-gradient(90deg, #ffffff 0%, #ffffff 35%, #cccccc 50%, #ffffff 65%, #ffffff 100%);
             background-size: 200% auto;
@@ -130,10 +138,8 @@
             gap: 20px;
         }
 
-        /* Social Brand Colors on Hover */
         .list-item.yt:hover i { color: var(--youtube); }
         .list-item.tw:hover i { color: var(--twitch); }
-        .list-item.fb:hover i { color: var(--facebook); }
         .list-item.dc:hover i { color: var(--discord); }
 
         .item-info i {
@@ -162,7 +168,7 @@
 
         .list-item:hover .item-action { opacity: 1; }
 
-        /* --- Discord & Player --- */
+        /* --- UI Elements --- */
         .discord-wrapper { position: fixed; bottom: 110px; right: 40px; z-index: 100; }
         .discord-btn {
             background: rgba(0, 0, 0, 0.85); border: 1px solid var(--border); border-radius: 50px;
@@ -179,7 +185,7 @@
         .footer a { color: #fff; text-decoration: none; font-weight: bold; }
 
         @media (max-width: 768px) {
-            .wf-text { font-size: 2.5rem; }
+            .wf-text { font-size: 2.5rem; letter-spacing: 6px; }
             .main-container { width: 90%; margin-top: 120px; }
         }
     </style>
@@ -187,6 +193,7 @@
 <body>
 
     <div class="bg-overlay"></div>
+    <div class="scanlines"></div>
 
     <div class="top-header">
         <span class="wf-text">OFFICIAL DIRECTORY</span>
@@ -207,23 +214,12 @@
 
         <div class="category-group">
             <h2 class="category-title">Live Broadcast</h2>
-            <a href="ใส่ลิงก์TWITCHที่นี่" target="_blank" class="list-item tw">
+            <a href="https://www.twitch.tv/mikeylesss" target="_blank" class="list-item tw">
                 <div class="item-info">
                     <i class="fa-brands fa-twitch"></i>
-                    <span class="item-name">Twitch Studio</span>
+                    <span class="item-name">MIKEY ONELESS</span>
                 </div>
                 <span class="item-action">Follow</span>
-            </a>
-        </div>
-
-        <div class="category-group">
-            <h2 class="category-title">Social Feed</h2>
-            <a href="https://www.facebook.com/tsumaki.tsunaji.342" target="_blank" class="list-item fb">
-                <div class="item-info">
-                    <i class="fa-brands fa-facebook"></i>
-                    <span class="item-name">Facebook Official</span>
-                </div>
-                <span class="item-action">Contact</span>
             </a>
         </div>
 
