--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
         
         <div class="category-group">
             <h2 class="category-title">Video Content</h2>
-            <a href="ใส่ลิงก์YOUTUBEที่นี่" target="_blank" class="list-item yt">
+            <a href="https://www.youtube.com/@mikeyless" target="_blank" class="list-item yt">
                 <div class="item-info">
                     <i class="fa-brands fa-youtube"></i>
-                    <span class="item-name">YouTube Channel</span>
+                    <span class="item-name">mikeyless</span>
                 </div>
                 <span class="item-action">Subscribe</span>
             </a>
