--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             --glass: rgba(255, 255, 255, 0.05);
             --border: rgba(255, 255, 255, 0.1);
             --shimmer-speed: 2.5s;
-            /* Social Colors */
             --youtube: #FF0000;
             --twitch: #9146FF;
             --discord: #5865F2;
@@ -44,15 +43,6 @@
             z-index: -1;
         }
 
-        .scanlines {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: linear-gradient(to bottom, transparent 50%, rgba(255, 255, 255, 0.01) 50%);
-            background-size: 100% 4px;
-            z-index: 10;
-            pointer-events: none;
-        }
-
         /* --- Header Section --- */
         .top-header {
             position: absolute;
@@ -65,8 +55,8 @@
         .wf-text {
             font-family: 'Orbitron', sans-serif;
             font-size: 4.5rem;
-            font-weight: 900;
             letter-spacing: 12px; 
+            font-weight: 900;
             text-transform: uppercase;
             background: linear-gradient(90deg, #ffffff 0%, #ffffff 35%, #cccccc 50%, #ffffff 65%, #ffffff 100%);
             background-size: 200% auto;
@@ -82,6 +72,43 @@
             100% { background-position: -200% center; }
         }
 
+        /* --- Search Bar Style --- */
+        .search-container {
+            width: 100%;
+            max-width: 550px;
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        .search-input {
+            width: 100%;
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid var(--border);
+            padding: 15px 20px 15px 50px;
+            color: #fff;
+            font-family: 'Rajdhani', sans-serif;
+            font-size: 1rem;
+            letter-spacing: 2px;
+            outline: none;
+            transition: 0.3s;
+            backdrop-filter: blur(10px);
+        }
+
+        .search-input:focus {
+            border-color: #fff;
+            background: rgba(255, 255, 255, 0.08);
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+        }
+
+        .search-icon {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: var(--secondary);
+            font-size: 1rem;
+        }
+
         /* --- List UI Container --- */
         .main-container {
             position: relative;
@@ -90,13 +117,12 @@
             max-width: 550px;
             display: flex;
             flex-direction: column;
-            gap: 20px;
-            margin-top: 80px;
+            margin-top: 100px;
         }
 
         .category-group {
             width: 100%;
-            margin-bottom: 5px;
+            margin-bottom: 25px;
         }
 
         .category-title {
@@ -108,7 +134,6 @@
             padding-left: 15px;
             border-left: 2px solid #fff;
             text-transform: uppercase;
-            opacity: 0.8;
         }
 
         .list-item {
@@ -132,41 +157,16 @@
             box-shadow: -5px 0 0 #fff;
         }
 
-        .item-info {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
+        .item-info { display: flex; align-items: center; gap: 20px; }
+        .item-info i { font-size: 1.3rem; color: #fff; width: 30px; text-align: center; transition: 0.3s; }
+        .item-name { font-family: 'Rajdhani', sans-serif; font-size: 1.1rem; font-weight: 700; letter-spacing: 1.5px; text-transform: uppercase; }
+        .item-action { font-family: 'Orbitron', sans-serif; font-size: 0.55rem; letter-spacing: 2px; opacity: 0.4; text-transform: uppercase; }
+        .list-item:hover .item-action { opacity: 1; }
 
+        /* Social Brand Colors */
         .list-item.yt:hover i { color: var(--youtube); }
         .list-item.tw:hover i { color: var(--twitch); }
         .list-item.dc:hover i { color: var(--discord); }
-
-        .item-info i {
-            font-size: 1.3rem;
-            color: #fff;
-            width: 30px;
-            text-align: center;
-            transition: 0.3s;
-        }
-
-        .item-name {
-            font-family: 'Rajdhani', sans-serif;
-            font-size: 1.1rem;
-            font-weight: 700;
-            letter-spacing: 1.5px;
-            text-transform: uppercase;
-        }
-
-        .item-action {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 0.55rem;
-            letter-spacing: 2px;
-            opacity: 0.4;
-            text-transform: uppercase;
-        }
-
-        .list-item:hover .item-action { opacity: 1; }
 
         /* --- UI Elements --- */
         .discord-wrapper { position: fixed; bottom: 110px; right: 40px; z-index: 100; }
@@ -185,15 +185,14 @@
         .footer a { color: #fff; text-decoration: none; font-weight: bold; }
 
         @media (max-width: 768px) {
-            .wf-text { font-size: 2.5rem; letter-spacing: 6px; }
-            .main-container { width: 90%; margin-top: 120px; }
+            .wf-text { font-size: 2.2rem; letter-spacing: 6px; }
+            .main-container { width: 90%; margin-top: 150px; }
         }
     </style>
 </head>
 <body>
 
     <div class="bg-overlay"></div>
-    <div class="scanlines"></div>
 
     <div class="top-header">
         <span class="wf-text">OFFICIAL DIRECTORY</span>
@@ -201,37 +200,44 @@
 
     <div class="main-container">
         
-        <div class="category-group">
-            <h2 class="category-title">Video Content</h2>
-            <a href="https://www.youtube.com/@mikeyless" target="_blank" class="list-item yt">
-                <div class="item-info">
-                    <i class="fa-brands fa-youtube"></i>
-                    <span class="item-name">mikeyless</span>
-                </div>
-                <span class="item-action">Subscribe</span>
-            </a>
+        <div class="search-container">
+            <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            <input type="text" class="search-input" id="searchInput" placeholder="SEARCH DIRECTORY..." onkeyup="filterList()">
         </div>
 
-        <div class="category-group">
-            <h2 class="category-title">Live Broadcast</h2>
-            <a href="https://www.twitch.tv/mikeylesss" target="_blank" class="list-item tw">
-                <div class="item-info">
-                    <i class="fa-brands fa-twitch"></i>
-                    <span class="item-name">MIKEY ONELESS</span>
-                </div>
-                <span class="item-action">Follow</span>
-            </a>
-        </div>
+        <div id="directoryList">
+            <div class="category-group">
+                <h2 class="category-title">Video Content</h2>
+                <a href="https://www.youtube.com/@mikeyless" target="_blank" class="list-item yt">
+                    <div class="item-info">
+                        <i class="fa-brands fa-youtube"></i>
+                        <span class="item-name">YouTube Channel</span>
+                    </div>
+                    <span class="item-action">Subscribe</span>
+                </a>
+            </div>
 
-        <div class="category-group">
-            <h2 class="category-title">Community Server</h2>
-            <a href="https://discord.gg/oneless" target="_blank" class="list-item dc">
-                <div class="item-info">
-                    <i class="fa-brands fa-discord"></i>
-                    <span class="item-name">Discord ONELESS</span>
-                </div>
-                <span class="item-action">Join Group</span>
-            </a>
+            <div class="category-group">
+                <h2 class="category-title">Live Broadcast</h2>
+                <a href="https://www.twitch.tv/mikeylesss" target="_blank" class="list-item tw">
+                    <div class="item-info">
+                        <i class="fa-brands fa-twitch"></i>
+                        <span class="item-name">Twitch Studio</span>
+                    </div>
+                    <span class="item-action">Follow</span>
+                </a>
+            </div>
+
+            <div class="category-group">
+                <h2 class="category-title">Community Server</h2>
+                <a href="https://discord.gg/oneless" target="_blank" class="list-item dc">
+                    <div class="item-info">
+                        <i class="fa-brands fa-discord"></i>
+                        <span class="item-name">Discord ONELESS</span>
+                    </div>
+                    <span class="item-action">Join Group</span>
+                </a>
+            </div>
         </div>
 
     </div>
@@ -266,6 +272,37 @@
     </footer>
 
     <script>
+        // ฟังก์ชันค้นหาข้อมูลในรายการ
+        function filterList() {
+            let input = document.getElementById('searchInput');
+            let filter = input.value.toUpperCase();
+            let listItems = document.getElementsByClassName('list-item');
+            let categories = document.getElementsByClassName('category-group');
+
+            for (let i = 0; i < listItems.length; i++) {
+                let name = listItems[i].getElementsByClassName('item-name')[0];
+                if (name.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                    listItems[i].style.display = "";
+                } else {
+                    listItems[i].style.display = "none";
+                }
+            }
+            
+            // ซ่อนหัวข้อหมวดหมู่ถ้าไม่มีรายการที่ตรงเงื่อนไข
+            for (let j = 0; j < categories.length; j++) {
+                let itemsInCategory = categories[j].getElementsByClassName('list-item');
+                let hasVisibleItem = false;
+                for (let k = 0; k < itemsInCategory.length; k++) {
+                    if (itemsInCategory[k].style.display !== "none") {
+                        hasVisibleItem = true;
+                        break;
+                    }
+                }
+                categories[j].style.display = hasVisibleItem ? "" : "none";
+            }
+        }
+
+        // YouTube API
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         var firstScriptTag = document.getElementsByTagName('script')[0];
