--- a/index.html
+++ b/index.html
@@ -211,10 +211,21 @@
                 <a href="https://www.youtube.com/@mikeyless" target="_blank" class="list-item yt">
                     <div class="item-info">
                         <i class="fa-brands fa-youtube"></i>
-                        <span class="item-name">YouTube Channel</span>
+                        <span class="item-name">YouTube Mikey</span>
                     </div>
                     <span class="item-action">Subscribe</span>
                 </a>
+        <div id="directoryList">
+            <div class="category-group">
+                <h2 class="category-title">Video Content</h2>
+                <a href="https://www.youtube.com/@oshi.changretta" target="_blank" class="list-item yt">
+                    <div class="item-info">
+                        <i class="fa-brands fa-youtube"></i>
+                        <span class="item-name">YouTube Oshi</span>
+                    </div>
+                    <span class="item-action">Subscribe</span>
+                </a>
+            </div>
             </div>
 
             <div class="category-group">
